<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        style="@style/appTheme"
        android:layout_width="402dp"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="32dp"
            android:text="@string/settings_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/activeBGColor"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="78dp"
            android:layout_height="74dp"
            android:layout_alignTop="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-11dp"
            android:layout_marginRight="38dp"
            android:src="@drawable/settings"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <TextView
        android:id="@+id/barTextView"
        style="@style/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/helpTextView"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:text="@string/app_settings"
            android:textColor="@color/appFontColor"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/footerLinearLayout"
            style="@style/footer"
            android:layout_alignParentBottom="true"
            android:background="@color/bannerBGColor" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/appWebsite"
                android:textColor="@color/bgColor" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/helpTextView"
            android:layout_marginLeft="5dp"
            android:gravity="top"
            android:text="@string/appHelpExtra"
            android:textColor="@color/appFontColor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView01"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_smiley"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</LinearLayout>